option to download compressed directory

--- a/template.html
+++ b/template.html
@@ -11,6 +11,9 @@
 	</head>
 	<body>
 		<h2>index of {{ .DirName }}</h2>
+		<small><a href="{{ zref .DirName }}">download zip</a></small>
+		<br />
+		<br />
 		<table width="85%">
 			<thead>
 				<th>filename</th>
